--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,29 @@
 **/.DS_Store
 
 # ignore virtualenv
-env/
+**/env/
 
 # ignore face-recognition.db
 **/face-recognition.db
 
 # ignore __pycache__
 **/__pycache__/
+
+# build output
+**/dist/
+
+# generated types
+**/.astro/
+
+# dependencies
+**/node_modules/
+
+# logs
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/pnpm-debug.log*
+
+# environment variables
+**/.env
+**/.env.production
